@@ -1,8 +1,9 @@
 package com.HR_Management.hr.services;
 
-import com.HR_Management.hr.DTO.Request.EmployeeRequestDTO;
 import com.HR_Management.hr.DTO.Response.EmployeeResponseDTO;
+import com.HR_Management.hr.DTO.Request.EmployeeRequestDTO;
 import com.HR_Management.hr.common.CommonUtils;
+import com.HR_Management.hr.controller.EmployeeController;
 import com.HR_Management.hr.entities.Employee;
 import com.HR_Management.hr.entities.Leave;
 import com.HR_Management.hr.entities.Project;
@@ -14,6 +15,7 @@ import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 
 import java.util.*;
+import java.util.regex.Pattern;
 import java.util.stream.Collectors;
 
 @Service
@@ -50,17 +52,24 @@ public class EmployeeServices {
 //    }
 
     @Transactional
-    public List<Employee> saveEmployeeData(List<EmployeeResponseDTO> employeeList) {
+    public List<Employee> saveEmployeeData(List<EmployeeRequestDTO> employeeList, EmployeeController.DesignationValues designationValues) {
+        String emailRegexPattern = "^(?=.{1,64}@)[A-Za-z0-9_-]+(\\.[A-Za-z0-9_-]+)*@"
+                + "[^-][A-Za-z0-9-]+(\\.[A-Za-z0-9-]+)*(\\.[A-Za-z]{2,})$";
         return employeeList.stream().map(employee -> {
             Employee employee1= new Employee();
             employee1.setEmpId(CommonUtils.getUUID());
             employee1.setName(employee.getName());
-            employee1.setEmail(employee.getEmail());
+
+            if(Pattern.matches(emailRegexPattern,employee.getEmail()))
+            {
+                employee1.setEmail(employee.getEmail());
+            }
+
             employee1.setLeaves(employee.getLeaves());
             employee1.setSalary(employee.getSalary());
             employee1.setJoiningDate(employee.getJoiningDate());
             employee1.setDepartment(employee.getDepartment());
-            employee1.setDesignation(employee.getDesignation());
+            employee1.setDesignation(designationValues.toString());
             employee1.setAddress(employee.getAddress());
             return employeeRepository.save(employee1);
         }).collect(Collectors.toList());
@@ -87,21 +96,22 @@ public class EmployeeServices {
 //    public List<Employee> getEmployees() {
 //        return employeeRepository.findAll();
 //    }
-    public List<EmployeeRequestDTO> getEmployees() {
+    public List<EmployeeResponseDTO> getEmployees() {
         return employeeRepository.findAll().stream().map(this::convertEntityToDtoRequest).collect(Collectors.toList());
     }
 
-private EmployeeRequestDTO convertEntityToDtoRequest(Employee employee)
+private EmployeeResponseDTO convertEntityToDtoRequest(Employee employee)
 {
-    EmployeeRequestDTO employeeRequestDTO=new EmployeeRequestDTO();
-    employeeRequestDTO.setEmpId(employee.getEmpId());
-    employeeRequestDTO.setName(employee.getName());
-    employeeRequestDTO.setEmail(employee.getEmail());
-    employeeRequestDTO.setSalary(employee.getSalary());
-    employeeRequestDTO.setLeaves(employee.getLeaves());
-    employeeRequestDTO.setDepartment(employee.getDepartment());
-    employeeRequestDTO.setDesignation(employee.getDesignation());
-    return  employeeRequestDTO;
+    EmployeeResponseDTO employeeResponseDTO =new EmployeeResponseDTO();
+    employeeResponseDTO.setEmpId(employee.getEmpId());
+    employeeResponseDTO.setName(employee.getName());
+    employeeResponseDTO.setEmail(employee.getEmail());
+    employeeResponseDTO.setSalary(employee.getSalary());
+    employeeResponseDTO.setLeaves(employee.getLeaves());
+    employeeResponseDTO.setDepartment(employee.getDepartment());
+    employeeResponseDTO.setDesignation(employee.getDesignation());
+    employeeResponseDTO.setProjectList(employee.getProjects());
+    return employeeResponseDTO;
 }
 
     public Employee getEmployeeById(String empId) {
@@ -116,7 +126,7 @@ private EmployeeRequestDTO convertEntityToDtoRequest(Employee employee)
         List<String> EmployeeIds=employee.stream().map(Employee::getEmpId).toList();
 
         EmployeeIds.stream().peek(id->{
-            leaveRepository.deleteAll(leaveRepository.findAll().stream().filter(leave -> leave.getEmpId()==id).toList());
+            leaveRepository.deleteAll(leaveRepository.findAll().stream().filter(leave -> Objects.equals(leave.getEmpId(), id)).toList());
         }).collect(Collectors.toList());
 
         employee.stream().peek(employee1 -> {
@@ -132,10 +142,19 @@ private EmployeeRequestDTO convertEntityToDtoRequest(Employee employee)
     public void deleteEmployeesById(String empId)
     {
         Optional<Employee> currentEmployee=employeeRepository.findById(empId);
+
         if(currentEmployee.isPresent())
         {
             Employee emp=currentEmployee.get();
-            List<Leave> leaves=leaveRepository.findAll().stream().filter(leave -> leave.getEmpId()==emp.getEmpId()).toList();
+            List<Project> projectList=emp.getProjects();
+            projectList.stream().peek(project -> {
+                project.getEmployees().remove(emp);
+                projectRepository.save(project);
+                emp.getProjects().remove(project);
+                employeeRepository.save(emp);
+            }).collect(Collectors.toList());
+
+            List<Leave> leaves=leaveRepository.findAll().stream().filter(leave -> Objects.equals(leave.getEmpId(), emp.getEmpId())).toList();
             leaveRepository.deleteAllById(leaves.stream().map(Leave::getId).toList());
             employeeRepository.deleteById(empId);
         }
@@ -153,11 +172,10 @@ private EmployeeRequestDTO convertEntityToDtoRequest(Employee employee)
                 existingEmployee.setDesignation(employeeData.getDesignation() != null ? employeeData.getDesignation() : existingEmployee.getDesignation());
                 existingEmployee.setJoiningDate(employeeData.getJoiningDate() != null ? employeeData.getJoiningDate() : existingEmployee.getJoiningDate());
                 existingEmployee.setSalary(employeeData.getSalary() != null ? employeeData.getSalary() : existingEmployee.getSalary());
-//            existingEmployee.setProjects(employeeData.getProjects()!=null?employeeData.getProjects():existingEmployee.getProjects());
                 existingEmployee.setLeaves(employeeData.getLeaves() != null ? employeeData.getLeaves() : existingEmployee.getLeaves());
 
                 if (employeeData.getProjects() != null) {
-                    var projects = new ArrayList<>(projectRepository.findAllById(employeeData.getProjects().stream().map(Project::getP_id).toList()));
+                    var projects = new ArrayList<>(projectRepository.findAllById(employeeData.getProjects().stream().map(Project::getId).toList()));
                     List<Project> existingProjects = existingEmployee.getProjects();
                     projects.stream().peek(project -> {
                         existingProjects.add(project);
