@@ -1,12 +1,15 @@
 package com.HR_Management.hr.services;
 
 import com.HR_Management.hr.DTO.Request.LeaveRequestDTO;
+import com.HR_Management.hr.DTO.Request.LeaveRequestUpdateDTO;
+import com.HR_Management.hr.DTO.Response.LeaveResponseDTO;
 import com.HR_Management.hr.common.CommonUtils;
 import com.HR_Management.hr.controller.LeaveController;
 import com.HR_Management.hr.entities.Employee;
 import com.HR_Management.hr.entities.Leave;
 import com.HR_Management.hr.respository.EmployeeRepository;
 import com.HR_Management.hr.respository.LeaveRepository;
+import jakarta.transaction.Transactional;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 import org.springframework.util.Assert;
@@ -25,94 +28,102 @@ public class LeaveServices {
     @Autowired
     private EmployeeRepository employeeRepository;
 
-    public List<LeaveRequestDTO> getAllLeaves() {
-        return leaveRepository.findAll().stream().map(this::convertEntityToDtoRequest).collect(Collectors.toList());
+    public List<LeaveResponseDTO> getAllLeaves() {
+        return leaveRepository.findAll().stream().map(this::convertEntityToDtoResponse).collect(Collectors.toList());
     }
 
-    private LeaveRequestDTO convertEntityToDtoRequest(Leave leave)
+    private LeaveResponseDTO convertEntityToDtoResponse(Leave leave)
     {
-        LeaveRequestDTO leaveRequestDTO=new LeaveRequestDTO();
-        leaveRequestDTO.setEmpId(leave.getEmpId());
-        leaveRequestDTO.setDescription(leave.getDescription());
-        leaveRequestDTO.setType(leave.getType());
-        leaveRequestDTO.setFrom_date(leave.getFromDate());
-        leaveRequestDTO.setTo_date(leave.getToDate());
-        return leaveRequestDTO;
-
+        LeaveResponseDTO leaveResponseDTO =new LeaveResponseDTO();
+        leaveResponseDTO.setEmpId(leave.getEmpId());
+        leaveResponseDTO.setDescription(leave.getDescription());
+        leaveResponseDTO.setType(leave.getType());
+        leaveResponseDTO.setFrom_date(leave.getFromDate());
+        leaveResponseDTO.setTo_date(leave.getToDate());
+        leaveResponseDTO.setAccepted(leave.getAccepted());
+        leaveResponseDTO.setHolidayDays(leave.getHolidayDays());
+        leaveResponseDTO.setId(leave.getId());
+        return leaveResponseDTO;
     }
-//    public List<Leave> updateHolidays(List<Leave> leaveList)
-//    {
-//        leaveList
-//                .stream()
-//                .peek(leave -> {
-//                    if (Objects.nonNull(leave.getFromDate()) && Objects.nonNull(leave.getToDate())) {
-//                        LocalDate localFromDate = leave.getFromDate().toInstant().atZone(ZoneId.systemDefault()).toLocalDate();
-//                        LocalDate localToDate = leave.getToDate().toInstant().atZone(ZoneId.systemDefault()).toLocalDate();
-//                        Long holidayDays = ChronoUnit.DAYS.between(localFromDate, localToDate);
-//                        leave.setHolidayDays(holidayDays);
-//                    }
-//
-//                }).filter(leave -> Objects.nonNull(leave.getFromDate()) && Objects.nonNull(leave.getToDate()))
-//                .map(leaveRepository::save)
-//                .toList();;
-//        return leaveList;
-//    }
 
-
-    public List<Leave> saveLeaveData(List<Leave> leaveList) {
-        new Leave().setId(CommonUtils.getUUID());
-        leaveList
-                .stream()
-                .peek(leave -> {
-                    if (Objects.nonNull(leave.getFromDate()) && Objects.nonNull(leave.getToDate())) {
-                        LocalDate localFromDate = leave.getFromDate().toInstant().atZone(ZoneId.systemDefault()).toLocalDate();
-                        LocalDate localToDate = leave.getToDate().toInstant().atZone(ZoneId.systemDefault()).toLocalDate();
-                        Long holidayDays = ChronoUnit.DAYS.between(localFromDate, localToDate);
-                        leave.setHolidayDays(holidayDays);
-                    }
-
-                }).filter(leave -> Objects.nonNull(leave.getFromDate()) && Objects.nonNull(leave.getToDate()))
-                .map(leaveRepository::save)
-//                .peek(
-//                        leave -> {
-//                    Integer empId=leave.getEmpId();
-//                    String leaveId=leave.getId();
-//                    leaveRepository.updateMappingColumn(empId,leaveId);
-//                }
-//                )
-                .toList();
-
-//        leaveRepository.findAll().stream().peek(leave -> {
-//            Integer empId=leave.getEmpId();
-//            String leaveId=leave.getId();
-//            leaveRepository.updateMappingColumn(empId,leaveId);
-//        });
-        return leaveList;
+    @Transactional
+    public Leave saveLeaveData(LeaveRequestDTO leave, LeaveController.LeaveType leaveType) {
+        Leave leave1=new Leave();
+        leave1.setId(CommonUtils.getUUID());
+        leave1.setEmpId(leave.getEmpId());
+        leave1.setDescription(leave.getDescription());
+        leave1.setFromDate(leave.getFrom_date());
+        leave1.setToDate(leave.getTo_date());
+        leave1.setType(leaveType.toString());
+        if (Objects.nonNull(leave.getFrom_date()) && Objects.nonNull(leave.getTo_date()))
+        {
+//            LocalDate localFromDate = leave.getFrom_date().toInstant().atZone(ZoneId.systemDefault()).toLocalDate();
+//            LocalDate localToDate = leave.getTo_date().toInstant().atZone(ZoneId.systemDefault()).toLocalDate();
+            LocalDate localFromDate = leave.getFrom_date();
+            LocalDate localToDate = leave.getTo_date();
+            Long holidayDays = ChronoUnit.DAYS.between(localFromDate, localToDate);
+            leave1.setHolidayDays(holidayDays);
+        }
+        return leaveRepository.save(leave1);
     }
 
     public void deleteLeavesById(String id) {
         leaveRepository.deleteById(id);
     }
 
-    public Optional<Leave> updateLeaveById(String leaveId, Leave leaveData, String currentUserId) {
+    public LeaveResponseDTO updateLeaveById(String leaveId, LeaveRequestUpdateDTO leaveData, String currentUserId) {
         Employee currentUser = employeeRepository.findById((currentUserId))
                 .orElseThrow(() -> new RuntimeException("user with this id does not exist"));
-        return leaveRepository.findById(leaveId)
-                .map(existingLeave -> {
+//        return leaveRepository.findById(leaveId)
+//                .map(existingLeave -> {
+//                    Assert.isTrue(Objects.equals(existingLeave.getEmpId(), currentUserId) || currentUser.getDesignation().equalsIgnoreCase("HR"), "current user is not authorized to update leave request");
+//                    existingLeave.setDescription(leaveData.getDescription());
+//                    existingLeave.setType(leaveData.getType());
+//                    existingLeave.setUpdatedBy(currentUser);
+//                    existingLeave.setFromDate(leaveData.getFrom_date());
+//                    existingLeave.setToDate(leaveData.getTo_date());
+//                    if (Objects.nonNull(leaveData.getFrom_date()) && Objects.nonNull(leaveData.getTo_date()))
+//                    {
+////                        LocalDate localFromDate = leaveData.getFrom_date().toInstant().atZone(ZoneId.systemDefault()).toLocalDate();
+////                        LocalDate localToDate = leaveData.getTo_date().toInstant().atZone(ZoneId.systemDefault()).toLocalDate();
+//                        LocalDate localFromDate = leaveData.getFrom_date();
+//                        LocalDate localToDate = leaveData.getTo_date();
+//                        Long holidayDays = ChronoUnit.DAYS.between(localFromDate, localToDate);
+//                        existingLeave.setHolidayDays(holidayDays);
+//                    }
+//                    if(!currentUser.getDesignation().equalsIgnoreCase("HR"))
+//                    {
+////                    Assert.isTrue(currentUser.getDesignation().equalsIgnoreCase("HR"),"current user is not allowed to update leave status");
+//                    existingLeave.setAccepted(leaveData.getAccepted());
+//                    }
+//                    return leaveRepository.save(existingLeave);
+//
+//                });
 
-                    Assert.isTrue(existingLeave.getEmpId() == currentUserId || currentUser.getDepartment().equalsIgnoreCase("HR"), "current user is not authorized to update leave request");
-//                    Assert.isTrue(existingLeave.getEmployee() == currentUser || currentUser.getDepartment().equalsIgnoreCase("HR"), "current user is not authorized to update leave request");
-                    existingLeave.setDescription(leaveData.getDescription());
-                    existingLeave.setType(leaveData.getType());
-                    existingLeave.setAccepted(leaveData.getAccepted());
-                    existingLeave.setUpdatedBy(currentUser);
-                    return leaveRepository.save(existingLeave);
-                });
+        Leave existingLeave=leaveRepository.findById(leaveId).get();
+        Assert.isTrue(Objects.equals(existingLeave.getEmpId(), currentUserId) || currentUser.getDesignation().equalsIgnoreCase("HR"), "current user is not authorized to update leave request");
+        existingLeave.setDescription(leaveData.getDescription()!=null?leaveData.getDescription(): existingLeave.getDescription());
+        existingLeave.setType(leaveData.getType()!=null?leaveData.getType():existingLeave.getType());
+        existingLeave.setUpdatedBy(currentUser);
+        existingLeave.setFromDate(leaveData.getFrom_date()!=null?leaveData.getFrom_date():existingLeave.getFromDate());
+        existingLeave.setToDate(leaveData.getTo_date()!=null?leaveData.getTo_date():existingLeave.getToDate());
+        if (Objects.nonNull(leaveData.getFrom_date()) && Objects.nonNull(leaveData.getTo_date()))
+        {
+            LocalDate localFromDate = leaveData.getFrom_date();
+            LocalDate localToDate = leaveData.getTo_date();
+            Long holidayDays = ChronoUnit.DAYS.between(localFromDate, localToDate);
+            existingLeave.setHolidayDays(holidayDays);
+        }
+        if(!currentUser.getDesignation().equalsIgnoreCase("HR"))
+        {
+        existingLeave.setAccepted(leaveData.getAccepted());
+        }
+        leaveRepository.save(existingLeave);
+        return convertEntityToDtoResponse(existingLeave);
     }
 
     public List<Leave> doActionAtLeaveRequests(List<String> ids, LeaveController.Action action, String currentUserId) {
         Employee employee = employeeRepository.findById(currentUserId).orElseThrow(() -> new RuntimeException("wrong header not found"));
-//        return leaveRepository.findAllById(ids.stream().map(String::fromString).toList())
         return leaveRepository.findAllById(ids.stream().toList())
                 .stream()
                 .map(leave -> actionAtSingleLeave(leave, action, employee))
@@ -120,13 +131,25 @@ public class LeaveServices {
     }
 
     private Leave actionAtSingleLeave(Leave leave, LeaveController.Action action, Employee currentUser) {
-        Assert.isTrue(leave.getEmployee() != currentUser || currentUser.getDepartment().equalsIgnoreCase("HR"), "current user is not authorized to accept or reject leave request");
-        leave.setAccepted(action.val());
-        leave.setUpdatedBy(currentUser);
-        return leaveRepository.save(leave);
+        if(currentUser.getDesignation()!=null) {
+            Assert.isTrue(currentUser.getDesignation().equalsIgnoreCase("HR"), "current user is not authorized to accept or reject leave request");
+            leave.setAccepted(action.val());
+            leave.setUpdatedBy(currentUser);
+            return leaveRepository.save(leave);
+        }else {
+            throw new RuntimeException("User designation does not exist");
+        }
     }
 
     public List<Leave> getLeavesByEmployee(String empId) {
-        return leaveRepository.findAll().stream().filter(leave -> leave.getEmpId()==empId).toList();
+        return leaveRepository.findAll().stream().filter(leave -> Objects.equals(leave.getEmpId(), empId)).toList();
+    }
+
+    public List<Leave> showAcceptedRejectedLeavesById(LeaveController.Action action, String employeeId) {
+            return leaveRepository.findAll()
+                    .stream()
+                    .filter(leave -> Objects.equals(leave.getEmpId(), employeeId))
+                    .filter(leave -> leave.getAccepted()==action.val())
+                    .collect(Collectors.toList());
     }
 }
